e2e/testdata/hydration/compiled/helm-components/clusterrole_my-prometheus-pushgateway.yaml
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  labels:
    app: prometheus
    chart: prometheus-14.3.0
    component: pushgateway
    heritage: Helm
    release: my-prometheus
    test-case: hydration
  name: my-prometheus-pushgateway
rules: []
