e2e/testdata/hydration/compiled/helm-components/clusterrolebinding_my-cert-manager-controller-ingress-shim.yaml
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  labels:
    app: cert-manager
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: my-cert-manager
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: cert-manager
    helm.sh/chart: cert-manager-v1.3.0
    test-case: hydration
  name: my-cert-manager-controller-ingress-shim
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: my-cert-manager-controller-ingress-shim
subjects:
- kind: ServiceAccount
  name: my-cert-manager
  namespace: cert-manager
