e2e/testdata/hydration/compiled/helm-components/clusterrolebinding_my-ingress-nginx.yaml
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  labels:
    app.kubernetes.io/instance: my-ingress-nginx
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/version: 1.1.0
    helm.sh/chart: ingress-nginx-4.0.12
    test-case: hydration
  name: my-ingress-nginx
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: my-ingress-nginx
subjects:
- kind: ServiceAccount
  name: my-ingress-nginx
  namespace: ingress-nginx
