e2e/testdata/hydration/compiled/helm-components/clusterrolebinding_my-prometheus-pushgateway.yaml
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  labels:
    app: prometheus
    chart: prometheus-14.3.0
    component: pushgateway
    heritage: Helm
    release: my-prometheus
    test-case: hydration
  name: my-prometheus-pushgateway
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: my-prometheus-pushgateway
subjects:
- kind: ServiceAccount
  name: my-prometheus-pushgateway
  namespace: monitoring
